# rat_quickdns

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFACTOR_PLAN_V2.md  refactor_phase0_cleanup.sh  rename_resolvers.sh
docs/: ROUND_ROBIN_OPTIMIZATION.md  SMART_RESOLVER_MIGRATION.md  UNIVERSAL_EMERGENCY_HANDLING.md  custom_format.rs  logger.rs
docs/rat_quickmem_examples/: simd_codec_integration.rs  simd_usage.rs
docs/rat_quickmem_examples/python/: README.md  README_STRESS_TESTS.md  python_example.py  run_stress_test.py  security_test.py  simple_stress_test.py  stress_test.py
docs/rat_quickmem_examples/rust/: README.md  basic_usage.rs  encoding_analysis.rs  performance_test.rs
examples/: caller_init_dns_example.rs  client_subnet_example.rs  comprehensive_dns_query.rs  comprehensive_edns_test.rs  dns_logger_example.rs  dns_resolver_with_logging.rs  doh_comprehensive_test.rs  dot_comprehensive_test.rs  easy_dns_example.rs  fifo_cancellation_test.rs  hybrid_upstream_strategy_test.rs  mixed_protocol_test.rs  mx_record_test_doh.rs  mx_record_test_dot.rs  mx_record_test_udp.rs  pyo3_integration_example.rs  round_robin_optimization.rs  smart_dns_example.rs  tauri_integration_example.rs  unified_smart_resolver_example.rs  universal_emergency_handling.rs
python/: Cargo.toml  DEVELOPMENT.md  README.md  build.py  pyproject.toml
python/examples/: LOGGING_README.md  basic_usage.py  caller_init_log_example.py  performance_test.py  round_robin_example.py  round_robin_optimization.py  smart_dns_example.py  test_doh_only.py  test_logger_levels.py  universal_emergency_handling.py
python/src/: __init__.py  lib.rs
python/tests/: test_resolver.py
src/: builder.rs  dns_response.rs  error.rs  lib.rs  logger.rs  types.rs  upstream_handler.rs  utils.rs
src/builder/: engine.rs  metrics.rs  mod.rs  resolver.rs  resolver_builder.rs  strategy.rs  types.rs
src/config/: mod.rs  strict.rs
src/python_api/: builder.rs  logging.rs  mod.rs  resolver.rs  types.rs  utils.rs
src/resolver/: cache.rs  health.rs  mod.rs  strategy.rs
src/transport/: https.rs  mod.rs  tcp.rs  tls.rs  udp.rs
tests/: dns_response_tests.rs
tools/: check_large_files.py
