[package]
name = "rat_quickdns"
version = "0.1.0"
edition = "2021"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "A high-performance, feature-rich DNS client library with support for multiple transport protocols, load balancing, caching, and filtering"
readme = "README.md"
keywords = ["dns", "networking", "async", "doh", "dot"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.70"


[dependencies]
# Local dependencies
rat_quickmem = { path = "../rat_quickmem" }
zerg_creep = { path = "../zerg_creep" }

# Core async runtime
tokio = { version = "1.0", features = ["net", "time", "rt", "macros", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Networking and HTTP
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
hyper-rustls = "0.26"
reqwest = { version = "0.11", features = ["json"], optional = true }

# TLS support
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = { version = "0.24", optional = true }
rustls-native-certs = { version = "0.6", optional = true }
webpki-roots = { version = "0.25", optional = true }
ring = "0.16"
native-tls = "0.2"

# Caching
lru = "0.12"
dashmap = "5.5"

# Filtering and regex
regex = "1.10"

# Rate limiting
governor = "0.6"

# Metrics and observability
prometheus = "0.13"

# Required utilities
thiserror = "1.0"
rand = "0.8"
bytes = "1.5"
futures = "0.3"
pin-project-lite = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
async-trait = "0.1"
socket2 = "0.5"
hyper-tls = "0.6"
tokio-native-tls = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding (for DoH)
base64 = "0.21"

# URL parsing
url = "2.4"

# IP address utilities
ipnet = "2.9"

# Consistent hashing
sha2 = "0.10"

# Legacy dependencies (keeping for compatibility)
byteorder = "1.4"
smallvec = "1.11"
tinyvec = { version = "1.6", features = ["alloc"] }
fxhash = "0.2"

[features]
default = ["tokio-rustls", "reqwest", "dep:rustls-native-certs", "dep:webpki-roots"]
tokio-rustls = ["dep:tokio-rustls", "dep:rustls-native-certs", "dep:webpki-roots"]
reqwest = ["dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.11"
wiremock = "0.5"
env_logger = "0.10"
fastrand = "2.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
inherits = "dev"
